# tlo

./: .gitignore  README.md
javascript/: .eslintrc.cjs  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
javascript/tlo/: index.ts  tl_config.ts  tl_config_parser.ts  tl_core.ts  tl_simple_parser.ts  utils.ts
python/: README.md  pyproject.toml
python/tlo/: __init__.py  __main__.py  tl_config.py  tl_config_parser.py  tl_core.py  tl_simple_parser.py
tlo_for_tests/: td_api.tlo  telegram_api.tlo
